fix R3 Java8 and sidecar test compatibility